fixing store produit